added manager role and support for creating manager accounts